# fenics-beat

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  pyproject.toml
.github/workflows/: build_docs.yml  conda.yml  deploy_docs.yml  docker-image.yml  main-mpi.yml  main.yml  pypi.yml
demos/: ORdmm_Land.ode  apd_restitution.py  cellular_dynamics_heterogeneity.py  conduction_velocty.py  diffusion.py  endocardial_stimulation.py  endocardial_stimulation_odefile.py  endocardial_stimulation_single.py  epicardial_stimulation.py  fibrotic_region.py  multiple_stimulation_sites.py  niederer_benchmark.py  planar_slab.py  purkinje_stimulation.py  pvc.py  reentry.py  s1s2_tissue.py  simple_ode.py  slab.py  solve_many_odes.py
docs/: api.rst  new_cellmodel.md  quickstart.md  refs.bib
licenses/: LICENSE_dolfin_pyvista_adapter
odes/: ORdmm_Land.ode  ToRORd_dyn_chloride.ode  courtemanche_ramirez_nattel_1998.ode  fitzhughnagumo.ode  mahajan_shiferaw_sato_baher_olcese_xie_yang_chen_restrepo_karma_garfinkel_qu_weiss_2008.ode
odes/tentusscher_panfilov_2006/: README.md  tentusscher_panfilov_2006_M_cell.ode  tentusscher_panfilov_2006_endo_cell.ode  tentusscher_panfilov_2006_epi_cell.ode
odes/torord/: ToRORd_dyn_chloride_endo.ode  ToRORd_dyn_chloride_epi.ode  ToRORd_dyn_chloride_mid.ode
src/beat/: __init__.py  base_model.py  bidomain_model.py  cellmodel.py  cellsolver.py  conductivities.py  dolfin_odesolver.py  ecg.py  geometry.py  monodomain_model.py  monodomain_solver.py  odesolver.py  postprocess.py  single_cell.py  stimulation.py  units.py  utils.py  viz.py
src/beat/cellmodels/: __init__.py  beeler_reuter.py  beeler_reuter_1977.py  fitzhughnagumo.py  tentusscher_panfilov_2006_M_cell.py  tentusscher_panfilov_2006_epi_cell.py
src/beat/cellmodels/tentusscher_panfilov_2006/: __init__.py  endo.py  epi.py  mid.py
src/beat/cellmodels/torord_dyn_chloride/: endo.py  epi.py  mid.py
tests/: README.md  fixtures.py  test_bidomain_model.py  test_cell_models.py  test_cellmodels.py  test_demos.py  test_ecg.py  test_monodomain.py  test_monodomain_solver.py  test_odesolver.py  test_simulation.py  test_single_cell.py  test_utils.py
