[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "fenics-beat"
version = "0.0.3"
description = "Library to run cardiac EP simulations"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cardiac", "electrophysiology"]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://finsberg.github.io/fenics-beat"
Documentation = "https://finsberg.github.io/fenics-beat"
Source = "https://github.com/finsberg/fenics-beat"
Tracker = "https://github.com/finsberg/fenics-beat/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]
pypi = [
    "twine",
    "build"
]
demos = [
   "cardiac-geometries",
   "ldrb",
]
docs = [
   "jupyter-book",
   "jupytext",
   "fenics-beat[demos]"
]
all = [
   "fenics-beat[test]",
   "fenics-beat[docs]",
   "fenics-beat[pypi]",
   "fenics-beat[dev]",
   "fenics-beat[demos]"
]


testpaths = [
    "tests"
]

[tool.pytest.ini_options]
markers = [
    "skip_in_parallel: Skip test when running in parallel",
]

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "demos",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.

# Assume Python 3.10.
target-version = "py310"


[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
